--- a/assets/main.css
+++ b/assets/main.css
@@ -40,4 +40,13 @@ body {
     background-color: rgb(61, 64, 71);
 }
 
+
+.borrar-curso {
+    background-color: #465DA7;
+    border-radius: 50%;
+    padding: 5px 10px;
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+}
   
